# four-dots

./: .eslintrc.js  .gitignore  README.md  package.json  upload-butler.sh
public/: global.css
src/: App.svelte  apiTypes.ts  appState.ts  gameBoardState.ts  grid.ts  main.ts  state.ts  util.ts
src-tauri/: Cargo.toml  api_types.yml  build.rs  tauri.conf.json
src-tauri/src/: ai.rs  api_types.rs  api_types.yml  app_state.rs  cmd.rs  game_board_state.rs  main.rs  state.rs
src/components/: FitToScreen.svelte  GameBoard.svelte  GameWorld.svelte  PlayerPieces.svelte  PlayerScore.svelte  Star.svelte
