[package]
name = "four-dots"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "four-dots"
edition = "2018"
build = "build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_repr = "0.1"
serde_path_to_error = "0.1"
validator = { version = "0.12", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
anyhow = "1.0"

[build-dependencies]
api_typer = { git = "https://github.com/krscott/api_typer", rev = "a4e80ffee7f736563e04aad3e9f957e13431060d" }
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "four-dots"
path = "src/main.rs"
